--- a/start.html
+++ b/start.html
@@ -8,5 +8,6 @@
 <body>
     <p>my start file is not my index.html file</p>
     <img src="pineapple.jpg" alt="">
+    <p>this is blog branch</p>
 </body>
 </html>
